fix:Created new navigation bar changed hero section as grid was not responsive, tidied up code and added  the correct links to all the right pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,139 +16,122 @@ html {
 
 /*-------------------Header & Navigation Styling-------------------*/
 
-header {
-    position: fixed;
-    width: 100%;
-    border-bottom: 1px solid #383838;
-    top: 0;
-    z-index: 99;
-
+:root{
+    --white: #f9f9f9;
+    --black: #36383F;
+    --gray: #85888C;
 }
 
-#navbar {
-    width: 100%;
-    position: relative;
+a{
+    text-decoration: none;
+    font-family: "Poppins";
+}
+ul{
+    list-style: none;
+}
+
+.header{
     background-color: whitesmoke;
-    font-family: 'Poppins';
-    padding: 33px 0;
-}
-
-.navdiv {
-    margin: 0 auto;
-    width: 1370px;
-}
-
-.home {
-    text-decoration: none;
-    color: #383838;
-    
-}
-
-.navdiv ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    text-align: right;
-}
-
-.logo {
-    position: absolute;
-    left: 50%;
+    border-bottom: 0px solid #383838; 
+    position: sticky;
     top: 0;
-    margin-left: -132px;
-    padding: 5px;
+    width: 100%;
+    z-index: 999;
+    padding: 20px 0;
 }
 
-.logo h1 {
-    font-size: 3.5rem;
-    font-weight: 100;
-}
-
-.navdiv ul li {
+.logo{
     display: inline-block;
-    padding: 0 20px;
-    list-style: none;
-    display: inline-block;
-}
-
-.navdiv ul li:nth-child(1) {
-    float: left;
-}
-
-.navdiv ul li:nth-child(2) {
-    float: left;
-}
-
-.navdiv ul li:nth-child(3) {
-    float: left;
-}
-
-.navdiv ul li a {
-    position: relative;
-    text-transform: uppercase;
-    text-decoration: none;
     color: #383838;
-    padding: 10px 20px;
-}
-
-.navdiv a::after {
-    content: "";
-    position: absolute;
-    background-color: #383838;
-    height: 3px;
-    width: 0;
-    left: 8px;
-    bottom: -1px;
-    transition: all 0.3s;
-    opacity: 0;
-}
-
-.navdiv a:hover::after {
-   width: 80%;
-   opacity: 1;
-}
-
-.search-box {
-    margin-top: -6px;
-    height: 30px;
-    display: inline;
-    cursor: pointer;
-    background: whitesmoke;
-    border-radius: 30px;
-    align-items: center;
-    border: 1px solid whitesmoke;
-}
-
-.search-box:hover input {
-    width: 200px;
-    border: 1px solid #383838;
-    border-radius: 20px;
-    padding: 3px 20px;
-    font-family: 'Poppins', sans-serif;
-}
-
-nav i {
+    font-size: 2rem;
+    font-weight: 200;
     margin-left: 10px;
-    color: red;
-    padding: 10px;
+    font-family: "Poppins";
 }
 
-.search-box input {
-    width: 0;
-    outline: none;
-    border: none;
-    font-weight: 300;
-    transition: 0.8s;
+.nav{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: var(--black);
+    overflow: hidden;
+
+}
+.menu a{
+    display: block;
+    padding: 20px 30px;
+    color: whitesmoke;
+}
+.menu a:hover{
+    background-color: var(--gray);
+}
+.nav{
+    max-height: 0;
+    transition: max-height .5s ease-out;
+}
+
+
+.hamb{
+    cursor: pointer;
+    float: right;
+    padding: 40px 20px;
+}
+
+.hamb-line {
+    background: red;
+    display: block;
+    height: 2px;
+    position: relative;
+    width: 24px;
+    margin-top: -16px;
+
+}
+
+.hamb-line::before,
+.hamb-line::after{
+    background: red;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all .2s ease-out;
+    width: 100%;
+}
+.hamb-line::before{
+    top: 5px;
+}
+.hamb-line::after{
+    top: -5px;
+}
+
+.side-menu {
+    display: none;
+} 
+
+.side-menu:checked ~ nav{
+    max-height: 100%;
+}
+.side-menu:checked ~ .hamb .hamb-line {
     background: transparent;
 }
+.side-menu:checked ~ .hamb .hamb-line::before {
+    transform: rotate(-45deg);
+    top:0;
+}
+.side-menu:checked ~ .hamb .hamb-line::after {
+    transform: rotate(45deg);
+    top:0;
+}
+
+/*-----------------------------Header Logo------------------------*/
 
 .name-wrapper {
     display: flex;
     position: relative;
     left: 4em;
     width: 90%;
-    border-bottom: 2px solid #383838;
-    margin-top: 25%;
+    border-bottom: 0px solid #383838;
+    margin-top: 5%;
 }
 
 
@@ -182,73 +165,54 @@ nav i {
     border: 3px solid #383838;
 }
 
-/*-----------------------Hero Styling---------------------*/
+/*-----------------------Hero Section Styling---------------------*/
 
 .hero {
     max-width: 95%;
     padding: 2em;
     margin: 0 auto;
     padding-bottom: 0;
+} 
+
+.hero-image-container {
+    max-width: 1224px;
+    width: 90%;
+    margin: auto;
+    padding: 40px 0;
 }
 
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 1em;
-    grid-auto-rows: minmax(150px, auto); 
+.hero-photo-gallery {
+    display: flex;
+    gap: 20px;
 }
 
-.gallery__image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-
-}
-
-.text {
-    text-transform: uppercase;
-    font-size: .85rem;
-}
-
-.text span {
+.hero-image-column {
     display: flex;
     flex-direction: column;
-    margin-top: 55%;
+    gap: 20px;
 }
 
-.gallery__item--1 {
-    grid-column: 1 / span 2;
-    grid-row: 1 / span 2;
+.hero-photo img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    object-fit: cover;
 }
 
-.gallery__item--2 {
-    grid-column: 3;
-    grid-row: 1 / span 1;
-}
-
-.gallery__item--3 {
-    grid-column: 4;
-    grid-row: 1 / span 2;
-}
-
-.gallery__item--4 {
-    grid-column: 3 / span 1;
-    grid-row: 2 / span 2;
-}
+/*----------------------Main Page Styling------------------------*/
 
 .main-page {
     position: relative;
     width: 100%;
     height: 100%;
-    margin-top: 120px;
     margin-bottom: -25px;
-    padding-top: 20px;
+    padding-top: 10px;
     display: flex;
     flex-direction: column;
     animation: slide-up;
     animation-timeline: view();  
     animation-range-start: cover 0vh;
-    animation-range-end: contain 20vh; 
+    animation-range-end: contain 30vh; 
 }
 
 @keyframes slide-up {
@@ -262,8 +226,6 @@ nav i {
         line-height: 122px;
     }
 }
-
-/*----------------------Slogan Styling----------------------*/
 
 .main-page h1 {
     width: 95%;
@@ -288,7 +250,7 @@ nav i {
     padding: .9em 2em;
     border-radius: 25px;
     border: 2px solid #383838;
-    font-size: .9rem;
+    font-size: 0.9rem;
     text-transform: uppercase;
     text-decoration: none;
 
@@ -300,6 +262,8 @@ nav i {
     border: 2px solid red;
     transition: 0.5s;
 }
+
+/*--------------------Video Section Styling---------------------*/
 
 .video-section {
     position: relative;
@@ -316,6 +280,8 @@ nav i {
     border-radius: 15px;
     filter: grayscale(70%);
 }
+
+/*---------------------Second Page Slogan Styling-----------------------*/
 
 .second-page span {
     position: relative;
@@ -340,7 +306,7 @@ nav i {
     }
 }
 
-/*---------------------------About Styling--------------------------*/
+/*---------------------------About Section Styling--------------------------*/
 
 #about {
 
@@ -709,7 +675,7 @@ input {
     height: 100%;
 }
 
-/*---------------------404 Error Page---------------------*/
+/*---------------------404 Error Page Styling---------------------*/
 
 .error-page {
     position: absolute;
@@ -837,3 +803,5 @@ footer ul li {
 footer ul li a:hover {
     opacity: 1;
 }
+
+        
